# Docker

./: .coveragerc  .gitignore  Notes.txt  README.md  TODO  docker_update.py  flake.nix  pyproject.toml  ruff.toml
.github/workflows/: jeeves-jr_deploy.yml  jeeves_deploy.yml  main.yml
Sandboxes/Arch/: Arch.yml  Dockerfile  User.sh  pacman.conf  yay install
Sandboxes/Arch/etc/: sudoers
Sandboxes/Arch/etc/pacman.d/: mirrorlist
Sandboxes/Arch_Nvidea/: Arch.yml  Dockerfile  arch.sh
Sandboxes/Debian/: Debian.yml  Dockerfile
Sandboxes/Debian/home/: .zshrc
Sandboxes/Ubuntu/: Dockerfile  Ubuntu.yml  User.sh
file_server/: Dockerfile  fileserver.yml  test.yml
jeeves-jr/: docker-compose.yml
jeeves-jr/haproxy/: haproxy.cfg
jeeves/endlessh/: docker-compose.yml
jeeves/freshrss/: docker-compose.yml
jeeves/influxdb/: docker-compose.yml
jeeves/internal/: docker-compose.yml  haproxy.cfg
jeeves/postgres/: docker-compose.yml
jeeves/sccache/: docker-compose.yml
jeeves/web/: docker-compose.yml
jeeves/web/haproxy/: haproxy.cfg
my-haproxy/: Dockerfile  HAProxy.yml  haproxy.cfg  temp  test
scripts/: arch_mirror_updater.py  docker_update.py
templates/file_server/sites/: 000-default.conf
tests/: test_docker_update.py
